Fixed word wrapping in answers (and notifications)

--- a/static/css/dashboard.less
+++ b/static/css/dashboard.less
@@ -36,6 +36,7 @@
     p {
         padding-bottom: 5px;
     }
+    word-wrap: break-word;
 }
 
 .info {
